SERVER-77629 Prevent race between DiskSpaceMonitor and FCBIS