src/mongo/db/storage/disk_space_monitor.cpp
@@ -93,6 +93,7 @@ DiskSpaceMonitor* DiskSpaceMonitor::get(ServiceContext* svcCtx) {
 void DiskSpaceMonitor::_start(ServiceContext* svcCtx) {
     LOGV2(7333401, "Starting the DiskSpaceMonitor");
     invariant(!_job, "DiskSpaceMonitor is already started");
+    _dbpath = storageGlobalParams.dbpath;
     _job = svcCtx->getPeriodicRunner()->makeJob(PeriodicRunner::PeriodicJob{
         "DiskSpaceMonitor", [this](Client* client) { _run(client); }, Seconds(1)});
     _job.start();
@@ -125,11 +126,11 @@ void DiskSpaceMonitor::takeAction(OperationContext* opCtx, int64_t availableByte
 void DiskSpaceMonitor::_run(Client* client) try {
     auto opCtx = client->makeOperationContext();
 
-    const auto availableBytes = []() {
+    const auto availableBytes = [this]() {
         if (auto fp = simulateAvailableDiskSpace.scoped(); fp.isActive()) {
             return static_cast<int64_t>(fp.getData()["bytes"].numberLong());
         }
-        return getAvailableDiskSpaceBytes(storageGlobalParams.dbpath);
+        return getAvailableDiskSpaceBytes(_dbpath);
     }();
     LOGV2_DEBUG(7333405, 2, "Available disk space", "bytes"_attr = availableBytes);
     takeAction(opCtx.get(), availableBytes);
