src/mongo/db/storage/disk_space_monitor.h
@@ -84,6 +84,8 @@ private:
 
     PeriodicJobAnchor _job;
 
+    // Copy of the dbpath which is always safe to access.
+    std::string _dbpath;
     // This mutex protects _actions and the entire run loop of the disk space monitor.
     Mutex _mutex = MONGO_MAKE_LATCH("DiskSpaceMonitor::_mutex");
     std::vector<std::unique_ptr<Action>> _actions;
